--- a/table.html
+++ b/table.html
@@ -14,7 +14,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>Staff 1</td>
+                <td>Staff 1 "HR"</td>
             </tr>
             <tr>
                 <td>Staff 2</td>
